--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">To-Do App</string>
     <string name="Add_Task">Add Task</string>
+    <string name="Edit_Task">Edit Task</string>
     <string name="task_title_hint">Enter the title</string>
     <string name="Task_description_box">Enter the description</string>
     <string name="task_heading">TASK</string>
