--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">To-Do App</string>
+    <string name="app_name">ToDoist</string>
     <string name="Add_Task">Add Task</string>
     <string name="Edit_Task">Edit Task</string>
     <string name="task_title_hint">Enter the title</string>
