--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="task_heading">TASK</string>
     <string name="task_title">Title</string>
     <string name="content">TASK DESCRIPTION</string>
+    <string name="search">Search</string>
 </resources>
